# django_growth

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  runtests.py
django_growth/: apps.py  checks.py  config.py  context_processors.py  defaults.py  robots.py  sitemap_registry.py  urls.py  views.py
django_growth/templates/django_growth/: gtm.html  gtm_body.html  meta.html
django_growth/templates/django_growth/includes/: analytics.html
django_growth/templatetags/: growth_tags.py
tests/: test_checks.py  test_config.py  test_growth_meta.py  test_robots.py  test_settings.py  test_sitemap_registry.py  test_views.py  urls_test.py
