[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-growth"
version = "0.1.0"
description = "Reusable Django app for GTM, SEO meta, Search Console, sitemaps, and robots.txt."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "django-growth contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "Django>=4.2",
]

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/your-org/django-growth"

[tool.setuptools.packages.find]
where = ["."]
include = ["django_growth*"]

[tool.setuptools.package-data]
django_growth = ["templates/**/*.html"]
